// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Treemap with single measure and viewBy should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "ah1EuQxwaCqs",
                },
              },
            },
            "localIdentifier": "m_ah1EuQxwaCqs",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "view",
    },
    Object {
      "items": Array [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "ah1EuQxwaCqs",
            },
          },
        },
        "localIdentifier": "m_ah1EuQxwaCqs",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Treemap with single measure and viewBy should create expected props for core chart 1`] = `Object {}`;

exports[`Treemap with single measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "ah1EuQxwaCqs",
                },
              },
            },
            "localIdentifier": "m_ah1EuQxwaCqs",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "view",
    },
    Object {
      "items": Array [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "ah1EuQxwaCqs",
            },
          },
        },
        "localIdentifier": "m_ah1EuQxwaCqs",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Treemap with single measure should create expected props for core chart 1`] = `Object {}`;

exports[`Treemap with single measure, viewBy and segment should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "ah1EuQxwaCqs",
                },
              },
            },
            "localIdentifier": "m_ah1EuQxwaCqs",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "view",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.region",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "ah1EuQxwaCqs",
            },
          },
        },
        "localIdentifier": "m_ah1EuQxwaCqs",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Treemap with single measure, viewBy and segment should create expected props for core chart 1`] = `Object {}`;
